# MacJarvis

./: .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW_FIXES.md  Dockerfile.backend  Dockerfile.backend.alternative  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  MEMORY_SYSTEM_GUIDE.md  QUICK_START.md  README.md  TOOLS_GUIDE.md  TTS功能实现总结.md  docker-compose.yml  nginx.conf  requirements.txt  restart.sh  start.sh  start_prod.sh  stop.sh  stop_prod.sh  test_persistence.sh  启动问题修复说明.md  常用命令.md  开发规范-后端.md  快速启动TTS功能.md  部署变更总结.md
backend/: .env.example  README.md  TASK_DELEGATION_GUIDE.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agent/: __init__.py  api_service.py  app.py  mac_agent.py
backend/agent/core/: __init__.py  agent.py  client.py  config.py
backend/agent/memory/: __init__.py  manager.py
backend/agent/prompts/: __init__.py  system_prompts.py
backend/agent/tools/: README_REFACTOR.md  __init__.py  base_tools.py  command_paths.py  command_runner.py  env_detector.py  mac_tools.py  registry.py
backend/agent/tools/app/: __init__.py  manager.py
backend/agent/tools/data/: __init__.py  processor.py
backend/agent/tools/delegation/: __init__.py  check_tasks_tool.py  delegate_tool.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: asr.py  (+6 more)
backend/app/core/: machine_id.py
backend/app/middleware/: error_handler.py  metrics.py  request_id.py
backend/app/services/: chat_service.py  conversation_history_service.py  file_service.py  llm_service.py  markdown_exporter.py  memory_consolidator.py  memory_extractor.py  memory_integration_service.py  memory_manager.py  session_service.py  tts_service.py  user_service.py
backend/app/utils/: security.py
backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/migrations/: add_conversation_history_fields.sql  add_memory_system_tables.sql  env.py  simplify_memory_system.sql
backend/scripts/: migrate_conversation_history.py  run_migration.py  test_api.sh  test_first_token_latency.py  test_proxy_api.py
backend/server/: app.py
backend/tests/: README.md  README_测试交付.md  conftest.py  demo.py  integration_test_questions.py  run_chat_tests.py  run_tool_tests.py  test_agent_integration.py  test_agent_shell_integration.py  test_all_tools.py  test_cases_config.py  test_env_detector.py  test_mac_agent.py  test_machine_id.py  test_memory_system.py  test_new_tools.py  test_shell_command.py  verify_delivery.sh  view_chat_logs.py  view_results.py  交付文件清单.txt  对话记录说明.md  测试使用指南.md  聊天记录位置说明.md
backend/tests/api/: test_chat.py  test_health.py  test_sessions.py
backend/tests/chat_logs/: chat_logs_20260129_193739.json  chat_report_20260129_193739.md
backend/tests/tools/: QUICKSTART.md  README.md  __init__.py  base.py  run_all_tests.py
(+126 files in other folders)
